--- a/onedrivesdk/src/main/AndroidManifest.xml
+++ b/onedrivesdk/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest package="com.microsoft.onedrivesdk" xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.USE_CREDENTIALS"/>
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS"/>
