--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
     repositories {
+        google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
+        //to publish as library on JitPack
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
     }
 }
 
@@ -14,6 +17,8 @@ allprojects {
         maven {
             url project.nightliesUrl
         }
+        google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
