--- a/onedrivesdk/build.gradle
+++ b/onedrivesdk/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'maven'
+apply plugin: 'com.github.dcendents.android-maven'
+group = 'com.github.spudi'
 
 if (JavaVersion.current().isJava8Compatible()) {
     allprojects {
@@ -18,8 +20,8 @@ def getVersionName() {
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     defaultConfig {
         minSdkVersion 15
